cluster/apps/taqueria-bonjour/frontend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: taqueria-bonjour
  labels:
    app: taqueria-bonjour
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: taqueria-bonjour
  template:
    metadata:
      labels:
        app: taqueria-bonjour
    spec:
      containers:
        - name: frontend
          image: ghcr.io/paulkiernan/taqueria-bonjour-frontend:2.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
